# systemr-python

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.json
examples/: basic_usage.py  evaluate_strategy.py  risk_check.py  workflow_cookbook.py
systemr/: __init__.py  cli.py  client.py  mcp_server.py
tests/: test_client.py
