[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemr"
version = "1.0.0"
description = "Python SDK for agents.systemr.ai - AI-native risk intelligence for trading agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "System R AI", email = "agents@systemr.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "risk-management", "position-sizing", "ai-agents", "mcp"]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://systemr.ai"
Documentation = "https://agents.systemr.ai/docs"
Repository = "https://github.com/System-R-AI/systemr-python"
Issues = "https://github.com/System-R-AI/systemr-python/issues"
Changelog = "https://github.com/System-R-AI/systemr-python/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
