[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "systemr"
version = "2.1.0"
description = "Python SDK for agents.systemr.ai - Trading & Investment Operating System for AI agents (48 tools)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "System R AI", email = "agents@systemr.ai"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["trading", "risk-management", "position-sizing", "ai-agents", "mcp"]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://systemr.ai"
Documentation = "https://agents.systemr.ai/docs"
Repository = "https://github.com/System-R-AI/systemr-python"
Changelog = "https://github.com/System-R-AI/systemr-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["systemr*"]
